--- a/templates/codigo.html
+++ b/templates/codigo.html
@@ -36,8 +36,9 @@
     <header>
 
         <a id="logoHeader" href="index.html">
-            <img class="logo-header" src="http://192.168.1.125:5000/static/uploads/logo/logo.png" alt="">
+            <img id="logoImage" alt="Logo">
         </a>
+
 
     </header>
 
