--- a/templates/email.html
+++ b/templates/email.html
@@ -36,7 +36,7 @@
     <header>
 
         <a id="logoHeader" href="index.html">
-            <img id="logoImage" alt="Logo">
+            <img class="logo" id="logoImage" alt="Logo">
         </a>
 
     </header>
