--- a/templates/minhasReservas.html
+++ b/templates/minhasReservas.html
@@ -32,21 +32,25 @@
             <div class="search-container">
                 <i class="fas fa-search"></i>
                 <input type="text" id="campoBusca" placeholder="Pesquise seu livro..." class="search-box">
-                <button type="submit" class="search-button">Buscar</button>
+
+                <a class="search-button" href="catalogo.html"><i class="fa-solid fa-folder-open"></i>
+                    <p>Buscar</p>
+                </a>
             </div>
         </form>
+
         <div class="header-right">
             <div class="menu-container">
                 <button class="btn" id="menuButton">
-                        <span class="icon">
-                            <svg viewBox="0 0 175 80" width="40" height="40">
-                                <rect width="80" height="15" fill="#f0f0f0" rx="10"></rect>
-                                <rect y="30" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
-                                <rect y="60" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
-                            </svg>
-                        </span>
-                        <span class="text">MENU</span>
-                    </button>
+                    <span class="icon">
+                        <svg viewBox="0 0 175 80" width="40" height="40">
+                            <rect width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                            <rect y="30" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                            <rect y="60" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                        </svg>
+                    </span>
+                    <span class="text">MENU</span>
+                </button>
                 <ul class="dropdown-menu" id="dropdownMenu"></ul>
             </div>
         </div>
@@ -77,15 +81,6 @@
                         <tbody></tbody>
                     </table>
                 </div>
-                <div class="pagination" style="margin-top: 2rem;">
-                    <a href="" class="pagination-button" id="pagina-anterior">
-                        <i class="fas fa-chevron-left"></i> Anterior
-                    </a>
-                    <span class="current-page" id="paginaAtual">Página 1</span>
-                    <a href="" class="pagination-button" id="pagina-proxima">
-                        Próxima <i class="fas fa-chevron-right"></i>
-                    </a>
-                </div>
             </div>
         </section>
     </main>
@@ -96,12 +91,31 @@
             <div class="footer-contact">
                 <h3>Entre em contato conosco</h3>
                 <div class="social-links">
-                    <a href="https://www.whatsapp.com/?lang=pt_BR" aria-label="WhatsApp"><i
-                            class="fab fa-whatsapp"></i></a>
-                    <a href="https://www.instagram.com" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://br.linkedin.com" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://x.com/?lang=pt" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="https://pt-br.facebook.com" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <!-- From Uiverse.io by david-mohseni -->
+                    <ul class="wrapper">
+                        <li class="icon facebook">
+                            <span class="tooltip">Facebook</span>
+                            <i class="fa-brands fa-facebook-f redes"></i>
+                        </li>
+                        <li class="icon twitter">
+                            <span class="tooltip">Twitter</span>
+                            <i class="fa-brands fa-twitter redes"></i>
+                        </li>
+                        <li class="icon instagram">
+                            <span class="tooltip">Instagram</span>
+                            <i class="fa-brands fa-instagram redes"></i>
+                            </svg>
+                        </li>
+                        <li class="icon whatsapp">
+                            <span class="tooltip">WhatsApp</span>
+                            <i class="fa-brands fa-whatsapp redes"></i>
+                        </li>
+                        <li class="icon linkedin">
+                            <span class="tooltip">LinkedIn</span>
+                            <i class="fa-brands fa-linkedin-in redes"></i>
+                        </li>
+                    </ul>
+    
                 </div>
             </div>
             <div class="footer-info">
@@ -154,18 +168,10 @@
         function carregarReservasId() {
             const token = localStorage.getItem("token");
             var id_usuario = localStorage.getItem("id_usuario");
-            const params = new URLSearchParams(window.location.search);
-            var pagina = params.get('pagina') || 1;
-
-            if (pagina == 1) {
-                document.getElementById('pagina-anterior').style.display = "none";
-            } else {
-                document.getElementById('pagina-anterior').style.display = "inline-block";
-            }
 
             $.ajax({
                 method: "GET",
-                url: (typeof ipPython !== "undefined" ? ipPython : "") + "/reservasusuario/" + id_usuario + "?pagina=" + pagina,
+                url: (typeof ipPython !== "undefined" ? ipPython : "") + "/reservasusuario/" + id_usuario,
                 headers: {
                     'Authorization': 'Bearer ' + token
                 },
@@ -174,44 +180,29 @@
                     let tabela = $("#tabela-emprestimos tbody");
                     tabela.empty();
 
-                    var total = data.total_paginas;
-                    var paginaAtual = data.pagina_atual;
-                    var anterior = paginaAtual - 1;
-                    var proxima = paginaAtual + 1;
-
-                    document.getElementById("pagina-anterior").href = "historicoReservas.html?pagina=" + anterior;
-                    document.getElementById("pagina-proxima").href = "historicoReservas.html?pagina=" + proxima;
-                    document.getElementById("paginaAtual").innerHTML = `Página ${paginaAtual} de ${total}`;
-
-                    if (paginaAtual >= total) {
-                        document.getElementById('pagina-proxima').style.display = "none";
-                    } else {
-                        document.getElementById('pagina-proxima').style.display = "inline-block";
-                    }
-
-                    // Filtra as reservas ativas
+                    // Aqui você filtra as reservas ativas corretamente
                     let reservasAtivas = reservas.filter(reserva => reserva.status === 1);
 
                     if (reservasAtivas.length === 0) {
                         let mensagem = `
                             <tr>
-                                <td colspan="5" class="text-center">Não há nenhuma reserva em andamento</td>
+                                <td colspan="5" class="text-center">Não há nenhuma reserva em andamento!</td>
                             </tr>
                         `;
                         tabela.append(mensagem);
                     } else {
                         reservasAtivas.forEach(reserva => {
                             let linha = `
-                                <tr data-id="${reserva.id_emprestimo}">
-                                    <td>${reserva.data_reserva.replaceAll("-", "/")}</td>
-                                    <td>${reserva.nome_usuario}</td>
-                                    <td class="nome-coisado">${reserva.titulo_livro}</td>
-                                    <td>${reserva.autor_livro}</td>
-                                    <td>
-                                        <button class="cancelar-btn" data-id="${reserva.id_emprestimo}">Cancelar</button>
-                                    </td>
-                                </tr>
-                            `;
+                        <tr data-id="${reserva.id_emprestimo}">
+                            <td>${reserva.data_reserva.replaceAll("-", "/")}</td>
+                            <td>${reserva.nome_usuario}</td>
+                            <td class="nome-coisado">${reserva.titulo_livro}</td>
+                            <td>${reserva.autor_livro}</td>
+                            <td>
+                                <button class="cancelar-btn" data-id="${reserva.id_emprestimo}">Cancelar</button>
+                            </td>
+                        </tr>
+                    `;
                             tabela.append(linha);
                         });
                     }
@@ -221,6 +212,7 @@
                 }
             });
         }
+
 
         // Chama a função para carregar reservas ao iniciar
         $(document).ready(function () {
@@ -280,7 +272,7 @@
                 });
                 return;
             }
-            window.location.href = "home.html?q=" + encodeURIComponent(termo);
+            window.location.href = "catalogo.html?q=" + encodeURIComponent(termo);
         });
 
         // Logo adaptativo (igual Home)
