--- a/static/css/codigo.css
+++ b/static/css/codigo.css
@@ -13,6 +13,23 @@
     --branco: white;
 }
 
+:root {
+    --primary-color: #2c3e50;
+    --secondary-color: #3498db;
+    --terciary-color: #2a6b97;
+    --accent-color: #e74c3c;
+    --light-color: #ecf0f1;
+    --dark-color: #2c3e50;
+    --success-color: #1aac5f;
+    --warning-color: #f39c12;
+    --danger-color: #e90039;
+    --text-color: #333;
+    --text-light: #7f8c8d;
+    --white: #fff;
+    --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    --transition: all 0.3s ease;
+}
+
 .sair{
     background-color: #00010000;
     border: #00010000;
@@ -26,18 +43,28 @@ body {
     background-color: var(--branco);
 }
 
+img, svg {
+    vertical-align: middle;
+    max-width: 75px;
+}
+
 .logo-header {
     height: 100px;
     width: auto;
     padding: 20px;
 }
-
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
 section {
     display: flex;
 }
 
 .titulo {
-    color: var(--azul);
+    color: var(--primary-color);
     text-align: center;
     font-weight: bold;
     font-size: 45px;
@@ -66,7 +93,7 @@ section {
 
 .coisa {
     text-align: left;
-    color: var(--azul);
+    color: var(--primary-color);
     font-weight: bold;
     font-size: 22px;
     padding-top: 10px;
@@ -74,14 +101,14 @@ section {
 }
 
 .inserir {  
-    border-radius: 5px;
+    border-radius: 25px;
     padding: 10px;
     width: 405px;
     height: 48.5px;
     margin-bottom: 10px;
     font-size: 18px;
-    border: 2px solid var(--azul);
-    background-color: var(--azul-claro);
+    border: 2px solid black;
+    background-color: #f3f5fd;
 }
 
 input::placeholder {
@@ -93,20 +120,21 @@ input::placeholder {
 .botao-login {
     width: 405px;
     height: 48.5px;
-    color: var(--azul);
+    color: white;
     margin-top: 20px;
-    background-color: var(--branco);
-    border: 2px solid var(--azul);
-    border-radius: 5px;
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: 25px;
     font-weight: bold;
     font-size: 18px;
     transition: 0.2s;
 }
 
 .botao-login:hover {
-    background-color: var(--azul);
-    color: var(--branco);
+    background-color: black;
+    color: white;
     transition: 0.2s;
+    transform: translateY(-2px);
 }
 
 .texto {
