--- a/static/css/detalhesUsuario.css
+++ b/static/css/detalhesUsuario.css
@@ -5,11 +5,6 @@
     font-family: "Montserrat", sans-serif;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-}
-
 .sair {
     background-color: #00010000;
     border: #00010000;
@@ -32,6 +27,23 @@ a {
     --azul-modoescuro: #73A8FE;
     --vermelho-escuro: rgb(233, 0, 57);
     --vermelho-claro: rgb(255, 217, 222);
+}
+
+:root {
+    --primary-color: #2c3e50;
+    --secondary-color: #3498db;
+    --terciary-color: #2a6b97;
+    --accent-color: #e74c3c;
+    --light-color: #ecf0f1;
+    --dark-color: #2c3e50;
+    --success-color: #1aac5f;
+    --warning-color: #f39c12;
+    --danger-color: #e90039;
+    --text-color: #333;
+    --text-light: #7f8c8d;
+    --white: #fff;
+    --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    --transition: all 0.3s ease;
 }
 
 .item img {
@@ -76,31 +88,6 @@ header {
     width: 50px;
     margin-left: 10px;
     height: auto;
-}
-
-/* Barra de pesquisa */
-.search-container {
-    display: flex;
-    align-items: center;
-    background-color: var(--branco);
-    padding: 2px 20px;
-    border-radius: 25px;
-    width: 600px;
-}
-
-.search-container i {
-    color: black;
-    margin-right: 8px;
-    font-size: 1.2rem;
-}
-
-.search-box {
-    border: none;
-    outline: none;
-    font-size: 1.1rem;
-    width: 100%;
-    padding: 5px;
-    background-color: white;
 }
 
 .btn-catalogo:hover {
@@ -456,7 +443,7 @@ header li a {
 }
 
 .modal-header {
-    background-color: var(--azul-escuro);
+    background-color: var(--primary-color);
     color: var(--branco);
 }
 
@@ -618,8 +605,9 @@ h1 {
 }
 
 .form-label {
-    color: var(--azul-escuro);
+    color: var(--primary-color);
     font-weight: bold;
+    margin-bottom: 0;
 }
 
 .nav-item {
@@ -635,19 +623,20 @@ h1 {
 
 .mb-3 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
 }
 
 .nav-pills .nav-link.active {
-    color: var(--azul);
-    background-color: #eef3ff;
-    font-weight: bold;
+    color: var(--primary-color);
+    background-color: #3498db12;
+    border-bottom: 2px solid var(--primary-color);
+    border-radius: 8px 8px 0px 0px;
+    font-weight: bold; 
 }
 
 .nav-link {
-    border-radius: 0px;
-    color: var(--azul);
+    color: var(--primary-color);
     font-weight: bold;
     display: inline-block;
     position: relative;
@@ -661,7 +650,7 @@ h1 {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: var(--azul);
+    background-color: var(--primary-color);
     transition: transform 0.25s ease-out;
 }
 
@@ -669,9 +658,13 @@ h1 {
     transform: scaleX(1);
 }
 
+.nav-link:hover {
+    color: var(--primary-color);
+}
+
+
 .botao-editar {
-    --color: #3380ca;
-    background-color: white;
+    background-color: var(--primary-color);
     font-family: inherit;
     display: flex;
     align-items: center;
@@ -683,43 +676,18 @@ h1 {
     position: relative;
     cursor: pointer;
     overflow: hidden;
-    border: 2px solid var(--azul);
-    transition: color 0.5s;
+    border: none;
+    transition: 0.5s;
     z-index: 1;
     font-size: 17px;
     font-weight: bold;
-    border-radius: 6px;
-    color: var(--azul);
-}
-
-.botao-editar:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    background: var(--color);
-    height: 120px;
-    width: 500px;
-    border-radius: 50%;
-}
-
-.botao-editar:hover {
+    border-radius: 25px;
     color: white;
 }
 
-.botao-editar:before {
-    top: 100%;
-    left: 100%;
-    transition: all 0.7s;
-}
-
-.botao-editar:hover:before {
-    top: -30px;
-    left: -30px;
-}
-
-.botao-editar:active:before {
-    background: #0060BB;
-    transition: background 0s;
+.botao-editar:hover {
+    background-color: black;
+    transform: translateY(-2px);
 }
 
 .botao-voltar {
@@ -783,15 +751,9 @@ h1 {
     min-height: 100px;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-}
-
 .form-control {
-    border: 1px solid var(--azul);
+    border: 1px solid var(--primary-color);
+    border-radius: 25px;
     background-color: #eef3ff;
 }
 
@@ -802,6 +764,32 @@ form {
 
 #reviewsContainer {
     margin-top: 30px;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-salvar {
+    width: 470px;
+    height: 50px;
+    border-radius: 25px;
+    border: none;
+    transition: all 0.5s ease-in-out;
+    background-color: var(--primary-color);
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #f5f5f5;
+}
+
+.btn-salvar:hover{
+    background-color: black;
+    transition: var(--transition);
+    transform: translateY(-2px);
 }
 
 .review {
@@ -982,7 +970,11 @@ form {
 }
 
 .page-link {
-    color: var(--azul);
+    color: var(--primary-color);
+}
+
+.page-link:hover {
+    color: black;
 }
 
 .table-responsive {
@@ -990,17 +982,26 @@ form {
 }
 
 .table-responsive table {
-    border: 2px solid black;
+    width: 90%;
+    margin: 27px auto;
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .table-responsive th {
-    padding: 15px;
-    background-color: var(--azul);
+    background-color: var(--primary-color);
     color: var(--branco);
+    font-weight: bold;
+    border-bottom: 2px solid var(--dark-color);
 }
 
 .table-responsive td {
     padding: 15px;
+}
+
+.fade:not(.show) {
+    display: none;
 }
 
 .tab-pane {
