--- a/static/css/home.css
+++ b/static/css/home.css
@@ -39,6 +39,10 @@ a {
     color: black;
 }
 
+p {
+    margin-bottom: 0;
+}
+
 .swal2-confirm {
     background-color: var(--primary-color);
 }
@@ -218,6 +222,10 @@ header {
     padding-left: 1px;
 }
 
+.fa-search {
+    padding-right: 20px;    
+}
+
 .fa-sign-out-alt {
     padding-right: 7px;
     padding-left: 1px;
@@ -247,6 +255,10 @@ header {
     padding-left: 1px;
 }
 
+.fa-folder-open {
+    position: inherit !important;
+    color: #fff !important;
+}
 
 /* SUB-MODAIS DOS RELATÓRIOS */
 /* Estilo do submenu */
@@ -329,7 +341,7 @@ header {
 
 
 .header-end {
-    margin-bottom: 15px;
+    margin-right: 20px;
 }
 
 .item img {
@@ -413,64 +425,6 @@ header {
     color: #06005c;
 }
 
-.btn-catalogo {
-    width: 50px;
-    height: 35px;
-    border-radius: 8px;
-    background-color: var(--secondary-color);
-    border: none;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
-    cursor: pointer;
-    transition-duration: 0.3s;
-    overflow: hidden;
-    position: relative;
-    text-decoration: none !important;
-}
-
-.edit-svgIcon {
-    width: 17px;
-    transition-duration: 0.3s;
-}
-
-.edit-svgIcon path {
-    fill: white;
-}
-
-.btn-catalogo:hover {
-    width: 120px;
-    border-radius: 8px;
-    transition-duration: 0.3s;
-    background-color: var(--terciary-color);
-    align-items: center;
-}
-
-.btn-catalogo:hover .edit-svgIcon {
-    width: 20px;
-    transition-duration: 0.3s;
-    transform: translateX(20%);
-}
-
-.btn-catalogo::before {
-    display: none;
-    content: "Catálogo";
-    color: white;
-    transition-duration: 0.3s;
-    font-size: 2px;
-}
-
-.btn-catalogo:hover::before {
-    display: block;
-    padding-right: 10px;
-    font-size: 13px;
-    opacity: 1;
-    transform: translateY(0px);
-    transition-duration: 0.3s;
-}
-
 .inter {
     background-color: var(--escuro);
 }
@@ -502,6 +456,7 @@ header {
 }
 
 .dropdown-linha {
+    gap: 10px;
     display: flex;
     align-items: center;
 }
@@ -571,6 +526,106 @@ body img {
 footer {
     margin-top: 50px;
 }
+/* From Uiverse.io by david-mohseni */
+.wrapper {
+    display: inline-flex;
+    list-style: none;
+    height: 120px;
+    width: 100%;
+    padding-top: 40px;
+    font-family: "Poppins", sans-serif;
+    justify-content: center;
+}
+
+.wrapper .icon {
+    position: relative;
+    background: #fff;
+    border-radius: 50%;
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    color: black;
+}
+
+.wrapper .tooltip {
+    position: absolute;
+    top: 0;
+    font-size: 14px;
+    background: #fff;
+    color: #fff;
+    padding: 5px 8px;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .tooltip::before {
+    position: absolute;
+    content: "";
+    height: 8px;
+    width: 8px;
+    background: #fff;
+    bottom: -3px;
+    left: 50%;
+    transform: translate(-50%) rotate(45deg);
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon:hover .tooltip {
+    top: -45px;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+}
+
+.wrapper .facebook:hover,
+.wrapper .facebook:hover .tooltip,
+.wrapper .facebook:hover .tooltip::before {
+    background: #1877f2;
+    color: #fff;
+}
+
+.wrapper .twitter:hover,
+.wrapper .twitter:hover .tooltip,
+.wrapper .twitter:hover .tooltip::before {
+    background: #1da1f2;
+    color: #fff;
+}
+
+.wrapper .instagram:hover,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip::before {
+    background: #e4405f;
+    color: #fff;
+}
+.wrapper .whatsapp:hover,
+.wrapper .whatsapp:hover .tooltip,
+.wrapper .whatsapp:hover .tooltip::before {
+    background: #25D366;
+    color: #fff;
+}
+
+.wrapper .linkedin:hover,
+.wrapper .linkedin:hover .tooltip,
+.wrapper .linkedin:hover .tooltip::before {
+    background: #0077b5;
+    color: #fff;
+}
 
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
@@ -598,9 +653,14 @@ footer {
     .search-container {
         width: 150px;
         /* Reduzindo a largura da pesquisa */
-        padding: 5px 10px;
+        padding: 5px 30px;
         border-radius: 20px;
     }
+        .book-genre {
+            font-size: 0.92em;
+            color: #555;
+            margin-top: 0.3em;
+        }
 
     .search-box {
         font-size: 14px;
@@ -634,10 +694,6 @@ footer {
 }
 
 @media (max-width: 480px) {
-    .search-container {
-        width: 120px;
-        /* Ajuste fino para telas muito pequenas */
-    }
 
     .switch-container {
         font-size: 10px;
@@ -666,10 +722,6 @@ footer {
 
     .linha {
         padding: 2px;
-    }
-
-    .search-container {
-        width: 200px;
     }
 
     .menu-icon {
@@ -755,7 +807,7 @@ footer {
 body {
     font-family: 'Poppins', sans-serif;
     color: var(--text-color);
-    background-color: white;
+    background-color: #fff;
     line-height: 1.6;
 }
 
@@ -820,6 +872,7 @@ a {
     font-size: 16px;
     background-color: rgba(255, 255, 255, 0.9);
     transition: var(--transition);
+    margin-top: 0px;
 }
 
 .search-box:focus {
@@ -828,10 +881,13 @@ a {
 }
 
 .search-button {
-    margin-left: -100px;
+    margin-left: -128px;
     padding: 5px 20px;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
+    display: flex;
+    align-items: center;
+    gap: 10px;
     border: none;
     border-radius: 30px;
     cursor: pointer;
@@ -839,7 +895,7 @@ a {
 }
 
 .search-button:hover {
-    background-color: #2980b9;
+    background-color: black; 
 }
 
 .menu-icon {
@@ -857,12 +913,13 @@ a {
     border-radius: 5px;
     border: none;
     transition: all 0.5s ease-in-out;
+    background-color: var(--secondary-color);
     font-size: 20px;
-    font-weight: 600;
+    font-weight: bold;
     display: flex;
     align-items: center;
-    background: var(--secondary-color);
     color: #f5f5f5;
+    margin-right: 10px;
 }
 
 .btn:hover {
@@ -901,6 +958,7 @@ a {
 }
 
 .item-relatorios {
+    gap: 10px;
     display: flex;
     align-items: center;
 }
@@ -1031,9 +1089,9 @@ a {
 
 .form-select {
     padding: 10px 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: white;
+    border: 1px solid var(--primary-color);
+    border-radius: 25px;
+    background-color: #eef3ff;
     cursor: pointer;
     min-width: 200px;
 }
@@ -1315,17 +1373,27 @@ a {
 /* Responsividade */
 @media (max-width: 992px) {
     .header {
-        flex-direction: column;
         padding: 15px;
-    }
-
-    .header-left {
-        margin-bottom: 15px;
     }
 
     .search-form {
         width: 100%;
-        margin: 15px 0;
+    }
+
+    .header-right {
+        margin-right: 0px
+    }
+
+    .header-left img {
+        margin-left: 0;
+    }
+
+    .search-container {
+        width: 500px;
+    }
+
+    .search-container i {
+        left: 45px;
     }
 
     .dropdown-menu {
@@ -1352,18 +1420,53 @@ a {
 }
 
 @media (max-width: 576px) {
-    .search-container {
-        flex-direction: column;
-    }
 
     .search-button {
-        margin-left: 0;
-        margin-top: 10px;
-        width: 100%;
+        margin-left: -62px;
+        width: 20%;
+        height: 35px;
+        justify-content: center;
+    }
+
+    .search-container {
+        width: 320px;
+    }
+
+    .btn {
+        width: 55px;
+        margin-left: -20px;
+    }
+
+    .btn:hover .icon {
+        width: 70px;
+    }
+
+    .btn:hover {
+        transform: none;
+    }
+
+    .btn .text{
+        display: none;
+    }
+
+    .search-button p {
+        display: none;
+    }
+
+    .search-form {
+        margin: 0px;
+    }
+
+    .menu-container {
+        margin-left: 0px;
     }
 
     .filters {
         flex-direction: column;
+    }
+
+    .search-box {
+        width: 100%;
     }
 
     .form-select {
@@ -1410,10 +1513,10 @@ a {
 .menu-item a {
     display: flex;
     align-items: center;
-    padding: 12px 20px;
+    padding: 12px 0px;
+    width: 156px;
     color: var(--text-color);
     transition: var(--transition);
-    gap: 10px;
 }
 
 .menu-item a:hover {
@@ -1533,4 +1636,37 @@ a {
 header {
     position: relative;
     z-index: 100;
+}
+
+@media (max-width: 380px) {
+
+    .search-container {
+        width: 270px;
+    }
+
+    .search-button {
+        width: 25%;
+    }
+}
+
+@media (max-width: 330px) {
+    
+    .search-container {
+        width: 215px;
+    }
+
+    .search-button {
+        margin-left: -45px;
+    }
+    .wrapper{
+        display: inline-flex;
+            list-style: none;
+            height: 120px;
+            width: 100%;
+            padding-top: 40px;
+            font-family: "Poppins", sans-serif;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-content: center;
+    }
 }
