--- a/static/css/multas.css
+++ b/static/css/multas.css
@@ -633,29 +633,37 @@ h1 {
     margin-top: -35px;
 }
 
+.container {
+    width: 50% !important;
+    box-shadow: 0 6px 32px 0 rgba(40, 40, 40, 0.12);
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px !important;
+}
+
 .container h2 {
     margin-bottom: 15px;
     font-weight: bold;
-    color: var(--azul-escuro);
+    color: var(--primary-color);
     font-size: xx-large;
 }
 
 .input-group {
     display: flex;
     text-align: center;
-    justify-content: space-between;
+    justify-content: center;
     margin: 30px;
-    gap: 5px;
+    gap: 35px;
 }
 
 .inserir {
     width: 150px;
     padding: 15px 10px;
     text-align: center;
-    color: var(--azul);
-    border: 1px solid var(--azul);
+    color: var(--primary-color);
+    border: 1px solid black;
     background-color: #eef3ff;;
-    border-radius: 6px;
+    border-radius: 25px;
     margin: 4px;
 }
 
@@ -683,12 +691,12 @@ h2{
 }
 
 .kcr_btn {
-    background-color: var(--azul);
+    background-color: var(--primary-color);
     color: var(--branco);
     border: none;
     transition: 0.2s;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
     width: 540px;
     height: 45px;
@@ -698,8 +706,8 @@ h2{
 }
 
 .kcr_btn:hover {
-    background-color: var(--azul-escuro);
-    transform: scale(1.05);
+    background-color: black;
+    transform: translateY(-2px);
     transition: background-color 0.3s, transform 0.3s;
 }
 
