--- a/templates/multarUsuario.html
+++ b/templates/multarUsuario.html
@@ -45,20 +45,45 @@
         </div>
 
         <!-- Barra de Pesquisa -->
-        <div class="search-container">
-          <a href="catalogo.html"><i class="fas fa-search"></i></a>
-          <a href="catalogo.html"><button id="campoBusca" class="search-box">Pesquise seu livro</button></a>
-        </div>
+        <form id="formBuscaLivro" class="search-form">
+            <div class="search-container">
+                <i class="fas fa-search"></i>
+                <input type="text" id="campoBusca" placeholder="Pesquise seu livro..." class="search-box">
+                <a class="search-button" href="catalogo.html"><i class="fa-solid fa-folder-open"></i><p>Buscar</p></a>
+            </div>
+        </form>
+
+          <script>
+            $("#formBuscaLivro").on("submit", function (e) {
+                e.preventDefault();
+                let termo = $("#campoBusca").val().trim();
+                if (!termo) {
+                    Swal.fire({
+                        title: "Atenção!",
+                        text: "Digite algo para buscar.",
+                        icon: "warning"
+                    });
+                    return;
+                }
+                // Redireciona para home com busca
+                window.location.href = "catalogo.html?q=" + encodeURIComponent(termo);
+            });
+          </script>
 
         <div class="coisa">
             <!-- Ícone de Menu com Dropdown -->
             <div class="header-end">
                 <div class="menu-container">
-                    <div class="menu-icon" id="menuButton">
-                        <div class="menulinha"></div>
-                        <div class="menulinha"></div>
-                        <div class="menulinha"></div>
-                    </div>
+                    <button class="btn" id="menuButton">
+                      <span class="icon">
+                          <svg viewBox="0 0 175 80" width="40" height="40">
+                              <rect width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                              <rect y="30" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                              <rect y="60" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                          </svg>
+                      </span>
+                      <span class="text">MENU</span>
+                  </button>
 
                     <ul class="dropdown-menu" id="dropdownMenu">
 
@@ -78,85 +103,60 @@
 
   </div>
 
-  <footer class="inter">
-    <div class="separacao1">
-      <p>Entre em contato conosco</p>
-      <ul class="wrapper">
-        <a href="https://www.facebook.com/asa.literaria.biblioteca" target="_blank">
-          <li class="icon facebook" title="Facebook">
-            <span class="tooltip">Facebook</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" width="28" height="28" fill="currentColor">
-              <path
-                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" />
-            </svg>
-          </li>
-        </a>
-        <a href="https://twitter.com" target="_blank">
-          <li class="icon twitter" title="Twitter">
-            <span class="tooltip">Twitter</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="28" height="28" fill="currentColor">
-              <path
-                d="M459.4 151.7c.3 4.5.3 9 .3 13.6 0 138.7-105.6 298.7-298.7 298.7-59.5 0-114.9-17.2-161.4-47 8.4 1 16.8 1.3 25.5 1.3 49.2 0 94.6-16.7 130.7-44.8-46-.9-84.8-31.2-98.3-72.9 6.5 1 12.9 1.6 19.7 1.6 9.4 0 18.5-1.3 27.1-3.6-48.1-9.7-84-52-84-102.8v-1.3c14 7.8 30 12.6 47 13.1-27.8-18.5-46-50.2-46-86 0-18.5 5-35.7 13.7-50.6 50.1 61.3 125 101.4 209.5 105.6-1.7-7.7-2.6-15.7-2.6-23.9 0-57.9 46.9-104.8 104.8-104.8 30.2 0 57.6 12.6 76.8 32.9 23.9-4.5 46.4-13.5 66.5-25.6-7.8 24.4-24.4 44.8-46.4 57.6 21.2-2.4 41.6-8.2 60.4-16.7-14 20.8-31.8 39.1-52.4 53.8z" />
-            </svg>
-          </li>
-        </a>
-        <a href="https://www.instagram.com" target="_blank">
-          <li class="icon instagram" title="Instagram">
-            <span class="tooltip">Instagram</span>
-            <svg xmlns="http://www.w3.org/2000/svg" height="1.2em" fill="currentColor" class="bi bi-instagram"
-              viewBox="0 0 16 16">
-              <path
-                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z">
-              </path>
-            </svg>
-          </li>
-        </a>
-        <a href="https://api.whatsapp.com" target="_blank">
-          <li class="icon whatsapp" title="WhatsApp">
-            <span class="tooltip">WhatsApp</span>
-            <i class="fa-brands fa-whatsapp"></i>
-          </li>
-        </a>
-        <a href="https://www.linkedin.com/company/asa-literaria-biblioteca/" target="_blank">
-          <li class="icon linkedin" title="LinkedIn">
-            <span class="tooltip">LinkedIn</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="28" height="28" fill="currentColor">
-              <path
-                d="M100.28 448H7.4V148.9h92.88zm-46.44-340a53.5 53.5 0 1 1 0-107 53.5 53.5 0 1 1 0 107zm394.92 340h-92.68V302.4c0-34.7-.7-79.4-48.4-79.4-48.6 0-56 38.1-56 77.5V448h-92.68V148.9h89V196h1.3c12.4-23.5 42.5-48.4 87.5-48.4 93.7 0 111 61.7 111 141.9V448z" />
-            </svg>
-          </li>
-        </a>
-      </ul>
-    </div>
-    <div class="rodape-inter">
-      <div class="informacao">
-        <p class="informacoes">INFORMAÇÕES</p>
-        <div class="linha"></div>
-        <div class="display">
-          <i class="fa-solid fa-envelope icons"></i>
-          <p class="text">asa.literaria@email.com</p>
-        </div>
-
-        <div class="display">
-          <i class="fa-solid fa-phone icons"></i>
-          <p class="text">(18)99999-9999</p>
+  <footer class="footer">
+    <div class="footer-top">
+      <div class="footer-contact">
+        <h3>Entre em contato conosco</h3>
+        <div class="social-links">
+          <!-- From Uiverse.io by david-mohseni -->
+          <ul class="wrapper">
+            <li class="icon facebook">
+              <span class="tooltip">Facebook</span>
+              <i class="fa-brands fa-facebook-f redes"></i>
+            </li>
+            <li class="icon twitter">
+              <span class="tooltip">Twitter</span>
+              <i class="fa-brands fa-twitter redes"></i>
+            </li>
+            <li class="icon instagram">
+              <span class="tooltip">Instagram</span>
+              <i class="fa-brands fa-instagram redes"></i>
+              </svg>
+            </li>
+            <li class="icon whatsapp">
+              <span class="tooltip">WhatsApp</span>
+              <i class="fa-brands fa-whatsapp redes"></i>
+            </li>
+            <li class="icon linkedin">
+              <span class="tooltip">LinkedIn</span>
+              <i class="fa-brands fa-linkedin-in redes"></i>
+            </li>
+          </ul>
+  
         </div>
       </div>
-      <div class="imagem">
-          <a id="logoHeader" href="home.html">
-              <img id="logoImage2" alt="Logo">
-          </a>
-      </div>
-      <div class="localizacao">
-        <p class="local">LOCALIZAÇÃO
-          <br>
-          Birigui - SP
-        </p>
+      <div class="footer-info">
+        <div class="footer-column">
+          <h4>Informações</h4>
+          <div class="footer-line"></div>
+          <p><i class="fas fa-envelope"></i> asa.literaria@email.com</p>
+          <p><i class="fas fa-phone"></i> (18) 99999-9999</p>
+        </div>
+        <div class="footer-column footer-logo">
+          <img id="logoImage2" src="../static/img/logo.png" alt="Logo Asa Literária" class="footer-logo-img">
+        </div>
+        <div class="footer-column">
+          <h4>Localização</h4>
+          <div class="footer-line"></div>
+          <p><i class="fas fa-map-marker-alt"></i> Birigui - SP</p>
+          <p>Rua Exemplo, 123 - Centro</p>
+        </div>
       </div>
     </div>
-    <div class="as">
-      <a href="https://www.google.com.br/?hl=pt-BR" class="text2">Termos de Uso</a>
-      <a href="https://www.google.com.br/?hl=pt-BR" class="text2">Política de privacidade</a>
+    <div class="footer-bottom">
+      <a href="https://www.google.com.br/?hl=pt-BR">Termos de Uso</a>
+      <a href="https://www.google.com.br/?hl=pt-BR">Política de privacidade</a>
+      <p>&copy; 2023 Asa Literária. Todos os direitos reservados.</p>
     </div>
   </footer>
 
