--- a/templates/parametrizacao.html
+++ b/templates/parametrizacao.html
@@ -15,19 +15,8 @@
     <link rel="stylesheet" href="../static/css/home.css">
     <link rel="stylesheet" href="../static/css/parametrizacao.css">
     <link rel="icon" type="image/x-icon" href="../static/img/head-removebg-preview.png">
-    <style>
-        /* Extra boniteza integrando com home.css */
-        .pix-param-section {
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 6px 32px 0 rgba(40, 40, 40, 0.12);
-            margin-top: 40px;
-            padding: 2.5rem 2rem 2rem 2rem;
-            max-width: 820px;
-            margin-left: auto;
-            margin-right: auto;
-        }
 
+<style>
         .pix-param-section label {
             font-weight: 600;
             color: #314279;
@@ -46,7 +35,7 @@
         .pix-param-section .btn-primary {
             background: var(--primary-color);
             border: none;
-            width: 47rem;
+            width: 53rem;
             border-radius: 25px;
             font-weight: 600;
             font-size: 1.07rem;
@@ -79,9 +68,9 @@
         }
 
         .pix-display-card {
-            background: #f8f9fd;
+            background: #fff;
             border-radius: 8px;
-            width: 820px;
+            width: 900px;
             box-shadow: 0 6px 32px 0 rgba(40, 40, 40, 0.12);
             display: inline-block;
             padding: 2rem 2.5rem;
@@ -107,6 +96,7 @@
             }
         }
     </style>
+
 </head>
 
 <body>
@@ -120,9 +110,10 @@
             <div class="search-container">
                 <i class="fas fa-search"></i>
                 <input type="text" id="campoBusca" placeholder="Pesquise seu livro..." class="search-box">
-                <button type="submit" class="search-button">Buscar</button>
+                <a class="search-button" href="catalogo.html"><i class="fa-solid fa-folder-open"></i><p>Buscar</p></a>
             </div>
         </form>
+
         <div class="header-right">
             <div class="menu-container">
                 <button class="btn" id="menuButton">
@@ -184,12 +175,31 @@
             <div class="footer-contact">
                 <h3>Entre em contato conosco</h3>
                 <div class="social-links">
-                    <a href="https://www.whatsapp.com/?lang=pt_BR" aria-label="WhatsApp"><i
-                            class="fab fa-whatsapp"></i></a>
-                    <a href="https://www.instagram.com" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://br.linkedin.com" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://x.com/?lang=pt" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="https://pt-br.facebook.com" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <!-- From Uiverse.io by david-mohseni -->
+                    <ul class="wrapper">
+                        <li class="icon facebook">
+                            <span class="tooltip">Facebook</span>
+                            <i class="fa-brands fa-facebook-f redes"></i>
+                        </li>
+                        <li class="icon twitter">
+                            <span class="tooltip">Twitter</span>
+                            <i class="fa-brands fa-twitter redes"></i>
+                        </li>
+                        <li class="icon instagram">
+                            <span class="tooltip">Instagram</span>
+                            <i class="fa-brands fa-instagram redes"></i>
+                            </svg>
+                        </li>
+                        <li class="icon whatsapp">
+                            <span class="tooltip">WhatsApp</span>
+                            <i class="fa-brands fa-whatsapp redes"></i>
+                        </li>
+                        <li class="icon linkedin">
+                            <span class="tooltip">LinkedIn</span>
+                            <i class="fa-brands fa-linkedin-in redes"></i>
+                        </li>
+                    </ul>
+    
                 </div>
             </div>
             <div class="footer-info">
@@ -239,7 +249,7 @@
                 });
                 return;
             }
-            window.location.href = "home.html?q=" + encodeURIComponent(termo);
+            window.location.href = "catalogo.html?q=" + encodeURIComponent(termo);
         });
 
         // Logo adaptativo (igual Home)
